rke2/tooling/flux/theswamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: u4u-engine
  namespace: theswamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: u4u-engine
  template:
    metadata:
      labels:
        app: u4u-engine
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: u4u-engine
          image: zot.hwcopeland.net/florida-man-bioscience/u4u-engine:main@sha256:3acac8d6c580c244d6e70b54bd3be53bc1cff2787d7e3e7c497a1e0da51da1db # {"$imagepolicy": "tooling:u4u-engine"}
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "500m"
