rke2/tooling/flux/theswamp/service-arete-tutoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arete-tutoring
  namespace: theswamp
spec:
  selector:
    app: arete-tutoring
  ports:
    - port: 8080
      targetPort: 8080
