rke2/tooling/flux/theswamp/service-hu-rnmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: hu-rnmp-browser
  namespace: theswamp
spec:
  selector:
    app: hu-rnmp-browser
  ports:
    - port: 8050
      targetPort: 8050
