rke2/tooling/flux/theswamp/httproute-arete-tutoring.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arete-tutoring
  namespace: theswamp
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: floridamanweb-https
  hostnames:
    - "arete.floridamanweb.online"
  rules:
    - backendRefs:
        - name: arete-tutoring
          port: 8080
