rke2/tooling/flux/theswamp/httproute-hu-rnmp.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hu-rnmp
  namespace: theswamp
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: flmanbiosci-https
  hostnames:
    - "hu-rnmp.flmanbiosci.net"
  rules:
    - backendRefs:
        - name: hu-rnmp-browser
          port: 8050
